[package]
name = "bitcoin_num-fuzz"
version = "0.0.1"
authors = ["copied from rust-bitcoin"]
publish = false

[package.metadata]
cargo-fuzz = true

[features]
honggfuzz_fuzz = ["honggfuzz"]

[dependencies]
honggfuzz = { version = "0.5", optional = true }
bitcoin_num = { path = ".." }
rust-crypto = "0.2"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

#[[bin]]
#name = "sha1"
#path = "fuzz_targets/sha1.rs"
