[package]
name = "bitcoin_num-fuzz"
version = "0.0.1"
authors = ["copied from rust-bitcoin"]
publish = false

[package.metadata]
cargo-fuzz = true

[features]
afl_fuzz = ["afl"]
honggfuzz_fuzz = ["honggfuzz"]

[dependencies]
honggfuzz = { version = "0.5", optional = true }
bitcoin_num = { path = ".." }
rust-crypto = "0.2"
afl = { version = "0.4", optional = true }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "uint128_fuzz"
path = "fuzz_targets/uint128_fuzz.rs"
